rust/src/bindings.rs

extern "C" { pub fn fp2dfcmdec64 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u64 , start : u64) -> usize ; }
extern "C" { pub fn tpenc (in_ : * mut :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar , esize : :: std :: os :: raw :: c_uint) ; }
extern "C" { pub fn tpdec (in_ : * mut :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar , esize : :: std :: os :: raw :: c_uint) ; }
extern "C" { pub fn tpzenc (in_ : * mut :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar , esize : :: std :: os :: raw :: c_uint) ; }
extern "C" { pub fn tpzdec (in_ : * mut :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar , esize : :: std :: os :: raw :: c_uint) ; }
extern "C" { pub fn tpxenc (in_ : * mut :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar , esize : :: std :: os :: raw :: c_uint) ; }
extern "C" { pub fn tpxdec (in_ : * mut :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar , esize : :: std :: os :: raw :: c_uint) ; }
extern "C" { pub fn tp2denc (in_ : * mut :: std :: os :: raw :: c_uchar , nx : :: std :: os :: raw :: c_uint , ny : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar , esize : :: std :: os :: raw :: c_uint) ; }
extern "C" { pub fn tp2ddec (in_ : * mut :: std :: os :: raw :: c_uchar , nx : :: std :: os :: raw :: c_uint , ny : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar , esize : :: std :: os :: raw :: c_uint) ; }
extern "C" { pub fn tp2denc2 (in_ : * mut :: std :: os :: raw :: c_uchar , nx : :: std :: os :: raw :: c_uint , ny : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar) ; }
extern "C" { pub fn tp2ddec2 (in_ : * mut :: std :: os :: raw :: c_uchar , nx : :: std :: os :: raw :: c_uint , ny : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar) ; }
extern "C" { pub fn tp2denc4 (in_ : * mut :: std :: os :: raw :: c_uchar , nx : :: std :: os :: raw :: c_uint , ny : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar) ; }
extern "C" { pub fn tp2ddec4 (in_ : * mut :: std :: os :: raw :: c_uchar , nx : :: std :: os :: raw :: c_uint , ny : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar) ; }
extern "C" { pub fn tp2denc8 (in_ : * mut :: std :: os :: raw :: c_uchar , nx : :: std :: os :: raw :: c_uint , ny : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar) ; }
extern "C" { pub fn tp2ddec8 (in_ : * mut :: std :: os :: raw :: c_uchar , nx : :: std :: os :: raw :: c_uint , ny : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar) ; }
extern "C" { pub fn tp3denc (in_ : * mut :: std :: os :: raw :: c_uchar , nx : :: std :: os :: raw :: c_uint , ny : :: std :: os :: raw :: c_uint , nz : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar , esize : :: std :: os :: raw :: c_uint) ; }
extern "C" { pub fn tp3ddec (in_ : * mut :: std :: os :: raw :: c_uchar , nx : :: std :: os :: raw :: c_uint , ny : :: std :: os :: raw :: c_uint , nz : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar , esize : :: std :: os :: raw :: c_uint) ; }
extern "C" { pub fn tp3denc2 (in_ : * mut :: std :: os :: raw :: c_uchar , nx : :: std :: os :: raw :: c_uint , ny : :: std :: os :: raw :: c_uint , nz : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar) ; }
extern "C" { pub fn tp3ddec2 (in_ : * mut :: std :: os :: raw :: c_uchar , nx : :: std :: os :: raw :: c_uint , ny : :: std :: os :: raw :: c_uint , nz : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar) ; }
extern "C" { pub fn tp3denc4 (in_ : * mut :: std :: os :: raw :: c_uchar , nx : :: std :: os :: raw :: c_uint , ny : :: std :: os :: raw :: c_uint , nz : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar) ; }
extern "C" { pub fn tp3ddec4 (in_ : * mut :: std :: os :: raw :: c_uchar , nx : :: std :: os :: raw :: c_uint , ny : :: std :: os :: raw :: c_uint , nz : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar) ; }
extern "C" { pub fn tp3denc8 (in_ : * mut :: std :: os :: raw :: c_uchar , nx : :: std :: os :: raw :: c_uint , ny : :: std :: os :: raw :: c_uint , nz : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar) ; }
extern "C" { pub fn tp3ddec8 (in_ : * mut :: std :: os :: raw :: c_uchar , nx : :: std :: os :: raw :: c_uint , ny : :: std :: os :: raw :: c_uint , nz : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar) ; }
extern "C" { pub fn tp4denc (in_ : * mut :: std :: os :: raw :: c_uchar , nw : :: std :: os :: raw :: c_uint , nx : :: std :: os :: raw :: c_uint , ny : :: std :: os :: raw :: c_uint , nz : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar , esize : :: std :: os :: raw :: c_uint) ; }
extern "C" { pub fn tp4ddec (in_ : * mut :: std :: os :: raw :: c_uchar , nw : :: std :: os :: raw :: c_uint , nx : :: std :: os :: raw :: c_uint , ny : :: std :: os :: raw :: c_uint , nz : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar , esize : :: std :: os :: raw :: c_uint) ; }
extern "C" { pub fn tp4denc2 (in_ : * mut :: std :: os :: raw :: c_uchar , nw : :: std :: os :: raw :: c_uint , nx : :: std :: os :: raw :: c_uint , ny : :: std :: os :: raw :: c_uint , nz : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar) ; }
extern "C" { pub fn tp4ddec2 (in_ : * mut :: std :: os :: raw :: c_uchar , nw : :: std :: os :: raw :: c_uint , nx : :: std :: os :: raw :: c_uint , ny : :: std :: os :: raw :: c_uint , nz : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar) ; }
extern "C" { pub fn tp4denc4 (in_ : * mut :: std :: os :: raw :: c_uchar , nw : :: std :: os :: raw :: c_uint , nx : :: std :: os :: raw :: c_uint , ny : :: std :: os :: raw :: c_uint , nz : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar) ; }
extern "C" { pub fn tp4ddec4 (in_ : * mut :: std :: os :: raw :: c_uchar , nw : :: std :: os :: raw :: c_uint , nx : :: std :: os :: raw :: c_uint , ny : :: std :: os :: raw :: c_uint , nz : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar) ; }
extern "C" { pub fn tp4denc8 (in_ : * mut :: std :: os :: raw :: c_uchar , nw : :: std :: os :: raw :: c_uint , nx : :: std :: os :: raw :: c_uint , ny : :: std :: os :: raw :: c_uint , nz : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar) ; }
extern "C" { pub fn tp4ddec8 (in_ : * mut :: std :: os :: raw :: c_uchar , nw : :: std :: os :: raw :: c_uint , nx : :: std :: os :: raw :: c_uint , ny : :: std :: os :: raw :: c_uint , nz : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar) ; }
extern "C" { pub fn tp4enc (in_ : * mut :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar , esize : :: std :: os :: raw :: c_uint) ; }
extern "C" { pub fn tp4dec (in_ : * mut :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar , esize : :: std :: os :: raw :: c_uint) ; }
extern "C" { pub fn tp4zenc (in_ : * mut :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar , esize : :: std :: os :: raw :: c_uint) ; }
extern "C" { pub fn tp4zdec (in_ : * mut :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar , esize : :: std :: os :: raw :: c_uint) ; }
extern "C" { pub fn tp4xenc (in_ : * mut :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar , esize : :: std :: os :: raw :: c_uint) ; }
extern "C" { pub fn tp4xdec (in_ : * mut :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar , esize : :: std :: os :: raw :: c_uint) ; }
extern "C" { pub fn tpenc2 (in_ : * mut :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar) ; }
extern "C" { pub fn tpdec2 (in_ : * mut :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar) ; }
extern "C" { pub fn tpenc3 (in_ : * mut :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar) ; }
extern "C" { pub fn tpdec3 (in_ : * mut :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar) ; }
extern "C" { pub fn tpenc4 (in_ : * mut :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar) ; }
extern "C" { pub fn tpdec4 (in_ : * mut :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar) ; }
extern "C" { pub fn tpenc8 (in_ : * mut :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar) ; }
extern "C" { pub fn tpdec8 (in_ : * mut :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar) ; }
extern "C" { pub fn tpenc16 (in_ : * mut :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar) ; }
extern "C" { pub fn tpdec16 (in_ : * mut :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar) ; }
extern "C" { pub fn tpzenc2 (in_ : * mut :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar) ; }
extern "C" { pub fn tpzdec2 (in_ : * mut :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar) ; }
extern "C" { pub fn tpzenc3 (in_ : * mut :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar) ; }
extern "C" { pub fn tpzdec3 (in_ : * mut :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar) ; }
extern "C" { pub fn tpzenc4 (in_ : * mut :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar) ; }
extern "C" { pub fn tpzdec4 (in_ : * mut :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar) ; }
extern "C" { pub fn tpzenc8 (in_ : * mut :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar) ; }
extern "C" { pub fn tpzdec8 (in_ : * mut :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar) ; }
extern "C" { pub fn tpzenc16 (in_ : * mut :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar) ; }
extern "C" { pub fn tpzdec16 (in_ : * mut :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar) ; }
extern "C" { pub fn tpxenc2 (in_ : * mut :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar) ; }
extern "C" { pub fn tpxdec2 (in_ : * mut :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar) ; }
extern "C" { pub fn tpxenc3 (in_ : * mut :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar) ; }
